# auto-group

./: .env.example  .gitignore  README.md  migrate_db.py  pyproject.toml  test_ocr.py
app/: main.py
app/api/: admin.py  auth.py  deps.py  public.py  router.py
app/bot/: dashboard.py  events.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  entities.py
app/schemas/: admin.py
app/services/: audit.py  auth_rate_limit.py  cloud_text_moderation.py  dedupe.py  group_sync.py  groups.py  join_blacklist.py  message_moderation.py  ocr.py  onebot.py  rules.py  sync.py  tencentcloud_tms_config.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  adminRoute.ts  main.ts
frontend/src/api/: client.ts
frontend/src/components/: AdminLayout.vue  GroupSelector.vue
frontend/src/layouts/: GeekerLayout.vue
frontend/src/routers/: adminMenu.ts  index.ts
frontend/src/stores/modules/: tabs.ts  user.ts
frontend/src/styles/: app.css
frontend/src/theme/: dynamicTheme.ts
frontend/src/views/: DashboardView.vue  DedupeView.vue  EssenceView.vue  EventsView.vue  FilesView.vue  GroupsView.vue  JoinBlacklistView.vue  JoinView.vue  LoginView.vue  MessageModerationView.vue  NoticesView.vue  RulesView.vue
tests/: test_admin_route.py  test_auth_rate_limit.py  test_cors.py  test_dashboard_schema.py  test_dedupe.py  test_dedupe_api_shape.py  test_groups.py  test_join_blacklist.py  test_leave_events.py  test_member_activity.py  test_message_moderation.py  test_onebot_timeouts.py  test_rules.py
